[package]
name = "crankit-sys"
version = "1.0.0-rc.1"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.72"
repository = "https://github.com/jcornaz/crankit-sys"
description = "Generated bindings for the playdate C API"
categories = ["external-ffi-bindings", "game-development"]
keywords = ["playdate", "gamedev", "ffi", "no_std"]

[build-dependencies]
bindgen = "0.66.1"
