[package]
name = "crankit-sys"
version = "1.0.0-rc.2"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.72"
repository = "https://github.com/jcornaz/crankit-sys"
description = "Generated bindings for the playdate C API"
categories = ["external-ffi-bindings", "game-development"]
keywords = ["playdate", "gamedev", "ffi", "no_std"]

[dev-dependencies]
libm = "0.2.8"

[build-dependencies]
bindgen = "0.69.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[example]]
name = "minimal"
crate-type = ["staticlib", "cdylib"]

[[example]]
name = "hello_world"
crate-type = ["staticlib", "cdylib"]
